[gd_scene load_steps=5 format=2]

[ext_resource path="res://FjallaOne-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Story.gd" type="Script" id=2]
[ext_resource path="res://Imagens/btn_iniciar.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D"]
position = Vector2( -36.5714, -1056 )
scale = Vector2( 1.07143, 2.83333 )
color = Color( 0.133333, 0.133333, 0.133333, 1 )
polygon = PoolVector2Array( 64, 384, 64, 576, 960, 576, 960, 384 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.01
autostart = true

[node name="Node" type="Node" parent="."]

[node name="Story" type="RichTextLabel" parent="Node"]
margin_left = 64.0
margin_top = 64.0
margin_right = 896.0
margin_bottom = 384.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
script = ExtResource( 2 )

[node name="play_button" type="TextureButton" parent="Node"]
margin_left = 768.0
margin_top = 480.0
margin_right = 968.0
margin_bottom = 530.0
texture_normal = ExtResource( 3 )

[node name="Skip" type="Button" parent="Node"]
margin_left = 96.0
margin_top = 500.0
margin_right = 224.0
margin_bottom = 520.0
text = "Pular histÃ³ria >>"
[connection signal="timeout" from="Timer" to="Node/Story" method="_on_Timer_timeout"]
[connection signal="pressed" from="Node/play_button" to="Node/Story" method="_on_play_button_pressed"]
[connection signal="pressed" from="Node/Skip" to="Node/Story" method="_on_Skip_pressed"]
